2006-03-29  Werner Koch  <wk@g10code.com>

	Released 1.0.0rc1.

	* configure.ac (BUILD_ISODATE): New.
	* include/config.nsi.in: Ditto.
	* src/gpg4win.nsi: Display it on the Welcome page

2006-03-28  Werner Koch  <wk@g10code.com>

	* src/installer.nsi (CustomPageOptions): Write Labels, so that
	they are translatable.
	(MUI_FINISHPAGE_LINK_LOCATION): Localized.
	* src/installer-options.ini: Add label field and removed static
	texts.

2006-03-27  Werner Koch  <wk@g10code.com>

	* src/installer-options.ini: Don't create a desktop link by default.

	* src/installer.nsi: Add a logo image. Add leave function.
	(CheckExistingVersion): New.
	(TrimNewLines): New.
	(PrintWinPTSFWarning): New.
	* src/inst-sections.nsi: Call it.
	Do not show the splash screen.
	* src/inst-gpg4win.nsi: Write a version file.
	* src/uninst-gpg4win.nsi: Delete version file

2006-03-27  Marcus Brinkmann  <marcus@g10code.de>

	* installer.nsi: Move custom page for installer options before
	start menu path selection.  Do not allow to disable start menu
	creation at start meny path selection dialog.  Only display start
	menu path selection dialog if start menu creation is desired.
	Rename opt.ini to installer-options.ini.
	(CheckIfStartMenuWanted): New function.
	* installer-finish.nsi: Delete desktop and quicklaunch shortcuts.
	* inst-sections.nsi: Rename opt.ini to installer-options.ini.
	Install desktop and quick launch bar shortcuts.
	* Makefile.am (EXTRA_DIST): Rename opt.ini to
	installer-options.ini.
	* installer-options.ini: New file.

2006-03-21  Werner Koch  <wk@g10code.com>

	* Makefile.am (EXTRA_DIST): No more need tositribute the GPA 0.7.2
	patch/

	* src/installer.nsi: Add a cutom option page.
	(StrStr): New.  Taken from the NSIS reference manual.
	* src/opt.ini: New.

2006-03-15  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* src/inst-gpa.nsi: Fixed a typo.

2006-03-13  Werner Koch  <wk@g10code.com>

	* packages/Makefile.am (upload): New target for uploading the
	packages file.